# scpr-rs

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  install.sh.sha256  rustfmt.toml  scpr.code-workspace  tasks.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.mk/vault/local/agents-v2/: data.asc
plugins/: atlas.toml  bat.toml  copilot-cli.toml  delta.toml  difftastic.toml  dust.toml  eza.toml  fd.toml  fzf.toml  grex.toml  hyperfine.toml  jq.toml  just.toml  lsd.toml  midas.toml  mk.toml  navi.toml  rclone.toml  ripgrep.toml  scpr.toml  skim.toml  starship.toml  tw-dl.toml  yt-dlp.toml  zoxide.toml
scripts/: release.sh  test-post-install.sh
src/: cli_definition.rs  cli_support.rs  errors.rs  github.rs  installer.rs  installer_archive.rs  installer_tests.rs  main.rs  plugin.rs  plugin_scaffold.rs  remote_index.rs  settings.rs
