[package]
name = "scpr"
version = "0.4.0"
authors = ["Edward Fitz Abucay gh:@ffimnsr"]
edition = "2024"
readme = "README.md"
description = "Manage your local binaries with ease."
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/scpr-rs"
repository = "https://github.com/ffimnsr/scpr-rs"
license = "MIT OR Apache-2.0"
keywords = ["cli", "binary", "installer", "github", "pluggable"]
exclude = [".gitignore"]

[[bin]]
name = "scpr"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5", features = ["string"] }
clap_complete = "~4.5"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["tracing-log", "env-filter", "json"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
toml = "~1"
reqwest = { version = "~0.13", features = ["json", "stream"] }
tokio = { version = "~1", features = ["full"] }
walkdir = "~2"
anyhow = "~1"
dirs = "~6"
flate2 = "~1"
tar = "~0.4"
zip = "~8"
bzip2 = "~0.5"
xz2 = "~0.1"
zstd = "~0.13"
indicatif = "~0.18"
futures-util = "~0.3"
sha2 = "~0.10"
tempfile = "~3"
chrono = "~0.4"

[package.metadata.deb]
name = "scpr"
maintainer = "Edward Fitz Abucay gh:@ffimnsr"
section = "utility"
assets = [
  ["target/release/scpr", "usr/bin/", "755"],
  ["COPYRIGHT", "usr/share/doc/scpr/", "644"],
  ["LICENSE-MIT", "usr/share/doc/scpr/", "644"],
  ["LICENSE-APACHE", "usr/share/doc/scpr/", "644"],
  ["README.md", "usr/share/doc/scpr/README", "644"],
]
